--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.3.3
   pdfrx: ^1.0.94
   lucide_icons: ^0.257.0
+  flutter_tts: ^4.2.1
 
 dev_dependencies:
   flutter_test:
