--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "agham_tales",
-    "short_name": "agham_tales",
+    "name": "Agham Tales",
+    "short_name": "Agham Tales",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#hexcode",
+    "theme_color": "#hexcode",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
